subdir('encounters')
subdir('encounters_ex')
subdir('events')
subdir('scripts')

move_tutors_json = files('move_tutors.json')

tutorable_moves_h = custom_target('tutorable_moves.h',
    input: move_tutors_json,
    output: 'tutorable_moves.h',
    command: [
        make_tutorable_moves_py,
        '--schema', move_tutors_json,
        '--output-dir', meson.current_build_dir(),
    ]
)

zukan_enc_platinum_srcs = files(
    './encounters/000.json',
    './encounters/001.json',
    './encounters/002.json',
    './encounters/003.json',
    './encounters/004.json',
    './encounters/005.json',
    './encounters/006.json',
    './encounters/007.json',
    './encounters/008.json',
    './encounters/009.json',
    './encounters/010.json',
    './encounters/011.json',
    './encounters/012.json',
    './encounters/013.json',
    './encounters/014.json',
    './encounters/015.json',
    './encounters/016.json',
    './encounters/017.json',
    './encounters/018.json',
    './encounters/019.json',
    './encounters/020.json',
    './encounters/021.json',
    './encounters/022.json',
    './encounters/023.json',
    './encounters/024.json',
    './encounters/025.json',
    './encounters/026.json',
    './encounters/027.json',
    './encounters/028.json',
    './encounters/029.json',
    './encounters/030.json',
    './encounters/031.json',
    './encounters/032.json',
    './encounters/033.json',
    './encounters/034.json',
    './encounters/035.json',
    './encounters/036.json',
    './encounters/037.json',
    './encounters/038.json',
    './encounters/039.json',
    './encounters/040.json',
    './encounters/041.json',
    './encounters/042.json',
    './encounters/043.json',
    './encounters/044.json',
    './encounters/045.json',
    './encounters/046.json',
    './encounters/047.json',
    './encounters/048.json',
    './encounters/049.json',
    './encounters/050.json',
    './encounters/051.json',
    './encounters/052.json',
    './encounters/053.json',
    './encounters/054.json',
    './encounters/055.json',
    './encounters/056.json',
    './encounters/057.json',
    './encounters/058.json',
    './encounters/059.json',
    './encounters/060.json',
    './encounters/061.json',
    './encounters/062.json',
    './encounters/063.json',
    './encounters/064.json',
    './encounters/065.json',
    './encounters/066.json',
    './encounters/067.json',
    './encounters/068.json',
    './encounters/069.json',
    './encounters/070.json',
    './encounters/071.json',
    './encounters/072.json',
    './encounters/073.json',
    './encounters/074.json',
    './encounters/075.json',
    './encounters/076.json',
    './encounters/077.json',
    './encounters/078.json',
    './encounters/079.json',
    './encounters/080.json',
    './encounters/081.json',
    './encounters/082.json',
    './encounters/083.json',
    './encounters/084.json',
    './encounters/085.json',
    './encounters/086.json',
    './encounters/087.json',
    './encounters/088.json',
    './encounters/089.json',
    './encounters/090.json',
    './encounters/091.json',
    './encounters/092.json',
    './encounters/093.json',
    './encounters/094.json',
    './encounters/095.json',
    './encounters/096.json',
    './encounters/097.json',
    './encounters/098.json',
    './encounters/099.json',
    './encounters/100.json',
    './encounters/101.json',
    './encounters/102.json',
    './encounters/103.json',
    './encounters/104.json',
    './encounters/105.json',
    './encounters/106.json',
    './encounters/107.json',
    './encounters/108.json',
    './encounters/109.json',
    './encounters/110.json',
    './encounters/111.json',
    './encounters/112.json',
    './encounters/113.json',
    './encounters/114.json',
    './encounters/115.json',
    './encounters/116.json',
    './encounters/117.json',
    './encounters/118.json',
    './encounters/119.json',
    './encounters/120.json',
    './encounters/121.json',
    './encounters/122.json',
    './encounters/123.json',
    './encounters/124.json',
    './encounters/125.json',
    './encounters/126.json',
    './encounters/127.json',
    './encounters/128.json',
    './encounters/129.json',
    './encounters/130.json',
    './encounters/131.json',
    './encounters/132.json',
    './encounters/133.json',
    './encounters/134.json',
    './encounters/135.json',
    './encounters/136.json',
    './encounters/137.json',
    './encounters/138.json',
    './encounters/139.json',
    './encounters/140.json',
    './encounters/141.json',
    './encounters/142.json',
    './encounters/143.json',
    './encounters/144.json',
    './encounters/145.json',
    './encounters/146.json',
    './encounters/147.json',
    './encounters/148.json',
    './encounters/149.json',
    './encounters/150.json',
    './encounters/151.json',
    './encounters/152.json',
    './encounters/153.json',
    './encounters/154.json',
    './encounters/155.json',
    './encounters/156.json',
    './encounters/157.json',
    './encounters/158.json',
    './encounters/159.json',
    './encounters/160.json',
    './encounters/161.json',
    './encounters/162.json',
    './encounters/163.json',
    './encounters/164.json',
    './encounters/165.json',
    './encounters/166.json',
    './encounters/167.json',
    './encounters/168.json',
    './encounters/169.json',
    './encounters/170.json',
    './encounters/171.json',
    './encounters/172.json',
    './encounters/173.json',
    './encounters/174.json',
    './encounters/175.json',
    './encounters/176.json',
    './encounters/177.json',
    './encounters/178.json',
    './encounters/179.json',
    './encounters/180.json',
    './encounters/181.json',
    './encounters/182.json',
    './encounters_ex/mt_coronet_lake.json',
    './encounters_ex/honey_tree_common.json',
    './encounters_ex/honey_tree_uncommon.json',
    './encounters_ex/honey_tree_rare.json',
    './encounters_ex/trophy_garden_dailies.json',
    './encounters_ex/great_marsh_dailies_natdex.json',
    './encounters_ex/great_marsh_dailies.json',
    './encounters_ex/great_marsh_binocular_coords.json',
)

pokedex_enc_platinum_narc = custom_target('zukan_enc_platinum.narc',
    output: 'zukan_enc_platinum.narc',
    input: zukan_enc_platinum_srcs,
    env: json2bin_env,
    depends: [ py_consts_generators ],
    command: [
        make_pokedex_enc_platinum_py,
        '--knarc', knarc_exe,
        '--source-dir', '@CURRENT_SOURCE_DIR@',
        '--private-dir', '@PRIVATE_DIR@',
        '--output-dir', '@OUTDIR@'
    ]
)

nitrofs_files += pokedex_enc_platinum_narc
