subdir('bag')
subdir('battle')
subdir('diploma')
subdir('item_icons')
subdir('main_menu')
subdir('mining')
subdir('move_tutor')
subdir('naming_screen')
subdir('options_menu')
subdir('party_menu')
subdir('poffin_case')
subdir('pokedex')
subdir('pokemon_summary_screen')
subdir('poketch')
subdir('scroll_prompts')
subdir('shop_menu')
subdir('signposts')
subdir('start_menu')
subdir('title_screen')
subdir('town_map')
subdir('trap_effects')
subdir('underground_map_transition')
subdir('underground_top_screen')
subdir('windows')
