pl_waza_tbl_subdirs = [
    '0000',
    '0468',
    '0469',
    '0470',
    'absorb',
    'acid',
    'acid_armor',
    'acupressure',
    'aerial_ace',
    'aeroblast',
    'agility',
    'air_cutter',
    'air_slash',
    'amnesia',
    'ancient_power',
    'aqua_jet',
    'aqua_ring',
    'aqua_tail',
    'arm_thrust',
    'aromatherapy',
    'assist',
    'assurance',
    'astonish',
    'attack_order',
    'attract',
    'aura_sphere',
    'aurora_beam',
    'avalanche',
    'barrage',
    'barrier',
    'baton_pass',
    'beat_up',
    'belly_drum',
    'bide',
    'bind',
    'bite',
    'blast_burn',
    'blaze_kick',
    'blizzard',
    'block',
    'body_slam',
    'bone_club',
    'bonemerang',
    'bone_rush',
    'bounce',
    'brave_bird',
    'brick_break',
    'brine',
    'bubble',
    'bubble_beam',
    'bug_bite',
    'bug_buzz',
    'bulk_up',
    'bullet_punch',
    'bullet_seed',
    'calm_mind',
    'camouflage',
    'captivate',
    'charge',
    'charge_beam',
    'charm',
    'chatter',
    'clamp',
    'close_combat',
    'comet_punch',
    'confuse_ray',
    'confusion',
    'constrict',
    'conversion',
    'conversion_2',
    'copycat',
    'cosmic_power',
    'cotton_spore',
    'counter',
    'covet',
    'crabhammer',
    'cross_chop',
    'cross_poison',
    'crunch',
    'crush_claw',
    'crush_grip',
    'curse',
    'cut',
    'dark_pulse',
    'dark_void',
    'defend_order',
    'defense_curl',
    'defog',
    'destiny_bond',
    'detect',
    'dig',
    'disable',
    'discharge',
    'dive',
    'dizzy_punch',
    'doom_desire',
    'double_edge',
    'double_hit',
    'double_kick',
    'double_slap',
    'double_team',
    'draco_meteor',
    'dragon_breath',
    'dragon_claw',
    'dragon_dance',
    'dragon_pulse',
    'dragon_rage',
    'dragon_rush',
    'drain_punch',
    'dream_eater',
    'drill_peck',
    'dynamic_punch',
    'earth_power',
    'earthquake',
    'egg_bomb',
    'embargo',
    'ember',
    'encore',
    'endeavor',
    'endure',
    'energy_ball',
    'eruption',
    'explosion',
    'extrasensory',
    'extreme_speed',
    'facade',
    'fake_out',
    'fake_tears',
    'false_swipe',
    'feather_dance',
    'feint',
    'feint_attack',
    'fire_blast',
    'fire_fang',
    'fire_punch',
    'fire_spin',
    'fissure',
    'flail',
    'flamethrower',
    'flame_wheel',
    'flare_blitz',
    'flash',
    'flash_cannon',
    'flatter',
    'fling',
    'fly',
    'focus_blast',
    'focus_energy',
    'focus_punch',
    'follow_me',
    'force_palm',
    'foresight',
    'frenzy_plant',
    'frustration',
    'fury_attack',
    'fury_cutter',
    'fury_swipes',
    'future_sight',
    'gastro_acid',
    'giga_drain',
    'giga_impact',
    'glare',
    'grass_knot',
    'grass_whistle',
    'gravity',
    'growl',
    'growth',
    'grudge',
    'guard_swap',
    'guillotine',
    'gunk_shot',
    'gust',
    'gyro_ball',
    'hail',
    'hammer_arm',
    'harden',
    'haze',
    'headbutt',
    'head_smash',
    'heal_bell',
    'heal_block',
    'healing_wish',
    'heal_order',
    'heart_swap',
    'heat_wave',
    'helping_hand',
    'hidden_power',
    'high_jump_kick',
    'horn_attack',
    'horn_drill',
    'howl',
    'hydro_cannon',
    'hydro_pump',
    'hyper_beam',
    'hyper_fang',
    'hyper_voice',
    'hypnosis',
    'ice_ball',
    'ice_beam',
    'ice_fang',
    'ice_punch',
    'ice_shard',
    'icicle_spear',
    'icy_wind',
    'imprison',
    'ingrain',
    'iron_defense',
    'iron_head',
    'iron_tail',
    'judgment',
    'jump_kick',
    'karate_chop',
    'kinesis',
    'knock_off',
    'last_resort',
    'lava_plume',
    'leaf_blade',
    'leaf_storm',
    'leech_life',
    'leech_seed',
    'leer',
    'lick',
    'light_screen',
    'lock_on',
    'lovely_kiss',
    'low_kick',
    'lucky_chant',
    'lunar_dance',
    'luster_purge',
    'mach_punch',
    'magical_leaf',
    'magic_coat',
    'magma_storm',
    'magnet_bomb',
    'magnet_rise',
    'magnitude',
    'mean_look',
    'meditate',
    'me_first',
    'mega_drain',
    'megahorn',
    'mega_kick',
    'mega_punch',
    'memento',
    'metal_burst',
    'metal_claw',
    'metal_sound',
    'meteor_mash',
    'metronome',
    'milk_drink',
    'mimic',
    'mind_reader',
    'minimize',
    'miracle_eye',
    'mirror_coat',
    'mirror_move',
    'mirror_shot',
    'mist',
    'mist_ball',
    'moonlight',
    'morning_sun',
    'mud_bomb',
    'muddy_water',
    'mud_shot',
    'mud_slap',
    'mud_sport',
    'nasty_plot',
    'natural_gift',
    'nature_power',
    'needle_arm',
    'nightmare',
    'night_shade',
    'night_slash',
    'octazooka',
    'odor_sleuth',
    'ominous_wind',
    'outrage',
    'overheat',
    'pain_split',
    'payback',
    'pay_day',
    'peck',
    'perish_song',
    'petal_dance',
    'pin_missile',
    'pluck',
    'poison_fang',
    'poison_gas',
    'poison_jab',
    'poison_powder',
    'poison_sting',
    'poison_tail',
    'pound',
    'powder_snow',
    'power_gem',
    'power_swap',
    'power_trick',
    'power_whip',
    'present',
    'protect',
    'psybeam',
    'psychic',
    'psycho_boost',
    'psycho_cut',
    'psycho_shift',
    'psych_up',
    'psywave',
    'punishment',
    'pursuit',
    'quick_attack',
    'rage',
    'rain_dance',
    'rapid_spin',
    'razor_leaf',
    'razor_wind',
    'recover',
    'recycle',
    'reflect',
    'refresh',
    'rest',
    'return',
    'revenge',
    'reversal',
    'roar',
    'roar_of_time',
    'rock_blast',
    'rock_climb',
    'rock_polish',
    'rock_slide',
    'rock_smash',
    'rock_throw',
    'rock_tomb',
    'rock_wrecker',
    'role_play',
    'rolling_kick',
    'rollout',
    'roost',
    'sacred_fire',
    'safeguard',
    'sand_attack',
    'sandstorm',
    'sand_tomb',
    'scary_face',
    'scratch',
    'screech',
    'secret_power',
    'seed_bomb',
    'seed_flare',
    'seismic_toss',
    'self_destruct',
    'shadow_ball',
    'shadow_claw',
    'shadow_force',
    'shadow_punch',
    'shadow_sneak',
    'sharpen',
    'sheer_cold',
    'shock_wave',
    'signal_beam',
    'silver_wind',
    'sing',
    'sketch',
    'skill_swap',
    'skull_bash',
    'sky_attack',
    'sky_uppercut',
    'slack_off',
    'slam',
    'slash',
    'sleep_powder',
    'sleep_talk',
    'sludge',
    'sludge_bomb',
    'smelling_salts',
    'smog',
    'smokescreen',
    'snatch',
    'snore',
    'soft_boiled',
    'solar_beam',
    'sonic_boom',
    'spacial_rend',
    'spark',
    'spider_web',
    'spike_cannon',
    'spikes',
    'spite',
    'spit_up',
    'splash',
    'spore',
    'stealth_rock',
    'steel_wing',
    'stockpile',
    'stomp',
    'stone_edge',
    'strength',
    'string_shot',
    'struggle',
    'stun_spore',
    'submission',
    'substitute',
    'sucker_punch',
    'sunny_day',
    'super_fang',
    'superpower',
    'supersonic',
    'surf',
    'swagger',
    'swallow',
    'sweet_kiss',
    'sweet_scent',
    'swift',
    'switcheroo',
    'swords_dance',
    'synthesis',
    'tackle',
    'tail_glow',
    'tail_whip',
    'tailwind',
    'take_down',
    'taunt',
    'teeter_dance',
    'teleport',
    'thief',
    'thrash',
    'thunder',
    'thunderbolt',
    'thunder_fang',
    'thunder_punch',
    'thunder_shock',
    'thunder_wave',
    'tickle',
    'torment',
    'toxic',
    'toxic_spikes',
    'transform',
    'tri_attack',
    'trick',
    'trick_room',
    'triple_kick',
    'trump_card',
    'twineedle',
    'twister',
    'uproar',
    'u_turn',
    'vacuum_wave',
    'vine_whip',
    'vise_grip',
    'vital_throw',
    'volt_tackle',
    'wake_up_slap',
    'waterfall',
    'water_gun',
    'water_pulse',
    'water_sport',
    'water_spout',
    'weather_ball',
    'whirlpool',
    'whirlwind',
    'will_o_wisp',
    'wing_attack',
    'wish',
    'withdraw',
    'wood_hammer',
    'worry_seed',
    'wrap',
    'wring_out',
    'x_scissor',
    'yawn',
    'zap_cannon',
    'zen_headbutt',
]

pl_waza_tbl_data_srcs = []
foreach subdir : pl_waza_tbl_subdirs
    pl_waza_tbl_data_srcs += subdir / 'data.json'
endforeach

pl_waza_tbl_narc = custom_target('pl_waza_tbl.narc',
    output: 'pl_waza_tbl.narc',
    input: pl_waza_tbl_data_srcs,
    command: [
        movedata_py,
        '--knarc', knarc_exe,
        '--source-dir', '@CURRENT_SOURCE_DIR@',
        '--output-dir', '@OUTDIR@',
    ]
)

nitrofs_files += pl_waza_tbl_narc